- bug #1672789 [sqp] Undefined offset: 4 in sqlparser.lib.php #1674
- bug #1682044 [export] Export file even if file not selected
- bug #1664212 querywindow loses url encoded characters
+ [config] clean cookies on phpMyAdmin upgrade
- bug #1674972 [export] no export with %afm%
- bug #1667887 HTML maxlength
- bug #1679055 #1050 - Table '<table name>' already exists

2.10.0.3 (not released yet)
=====================

- bug #1679801 [core] XSS vulnerability in PMA_sanitize(), thanks to sp3x SecurityReason

2.10.0.2 (2007-03-02)
=====================

+ bug #1671813 CVE-2006-1549 deep recursion crash

2.10.0.1 (2007-03-01)
=====================

. [config] set $cfg['Servers'][$i]['ssl'] default value to false,
   we got reports from some users having problems with the default value of true

2.10.0.0 (2007-02-28)
=====================

- bug #1659176 [general] memory error displaying a table with large BLOBs
- bug #1668662 [install] can create the new pma_designer_coords table
+ [gui] navi logo now links to main page by default, with still the possibility
  of having an external URL

2007-02-25 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1667466, undefined variable when
      export + save on server
    * server_status.php: bug #1665930, undefined PHP_SELF

2007-02-24 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/config.default.php: RFE #1621437, HEX and UNHEX were not
      available for a BINARY field

2007-02-21 Marc Delisle  <lem9@users.sourceforge.net>
    * pmd/scripts/move.js: bug #1650770, Designer and Mac OSX,
      thanks to Ivan Kirillov

2007-02-17 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: patch #1659347, missing doc for some config,
      thanks to Isaac Bennetch
    * libraries/export/sql.php: bug #1663336, undefined variable

2007-02-16 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php, footer.inc.php: avoid generating big links